--- a/index.html
+++ b/index.html
@@ -10,17 +10,17 @@ Released under the MIT license: http://jsbin.mit-license.org
 <meta name="robots" content="noindex">
 <html>
 <head>
-<meta name="description" content="Clock">
+  <meta name="description" content="Clock">
   <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Clock</title>
   
   <link href="https://fonts.googleapis.com/css?family=Fredericka+the+Great" rel="stylesheet">
   
-<style id="jsbin-css">
+<style>
 *{
-  margin:0;
-  padding:0;
+  margin: 0;
+  padding: 0;
 }
 html, body {
   height: 100%;
@@ -40,9 +40,10 @@ html, body {
 </style>
 </head>
 <body>
-  <div id="clock">12:13:14</div>
-<script id="jsbin-javascript">
+  <div id="clock"></div>
+<script>
 function colorClock() {
+  
   var date = new Date(),
       hours = date.getHours(),
       minutes = date.getMinutes(),
@@ -63,9 +64,7 @@ function colorClock() {
   
   document.body.style.background = hexColor;
   
-  setTimeout(function() {
-    colorClock();
-  }, 1000);
+  setTimeout(function () { colorClock(); }, 1000);
 }
 
 colorClock();
